<resources>
    <string name="app_name">СМЕННЫЙ ОТЧЕТ</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_report_fragment_label">СМЕННЫЕ ОТЧЕТ</string>
    <string name="report_fragment_label">СМЕННЫЙ ОТЧЕТ (НОВЫЙ)</string>
    <string name="update_report_fragment_label">СМЕННЫЙ ОТЧЕТ (РЕДАКТИРОВАНИЕ)</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="report_id_text">Номер сменного отчета: </string>
    <string name="construction_object_text">Наименование строительного объекта:</string>
    <string name="typical_work_text">Выберите вид работ:</string>
    <string name="construction_object_edit_text">нажмите, чтобы выбрать объект из списка</string>
    <string name="typical_work_edit_text">нажмите, чтобы выбрать работу</string>
    <string name="button_date_text">ДАТА НАЧАЛА СМЕНЫ</string>
    <string name="button_time_text">ВРЕМЯ НАЧАЛА СМЕНЫ</string>
    <string name="date_text">Дата:</string>
    <string name="time_text">Время:</string>
    <string name="from_date_text">XX.XX.XXXX</string>
    <string name="from_time_text">XX:XX</string>
    <string name="button_add_new_work_text">ДОБАВИТЬ НОВУЮ РАБОТУ</string>
    <string name="location_start_text">Начало производства работ:</string>
    <string name="location_end_text">Окончание производства работ:</string>
    <string name="pk">ПК</string>
    <string name="plus">+</string>
    <string name="location_comment">Примечание:</string>
    <string name="location_comment_hint">Развязка, съезд, местоположение и др.</string>
    <string name="button_add_new_material_text">ДОБАВИТЬ МАТЕРИАЛ</string>
    <string name="quantity_of_work_text">Количество работы:</string>
    <string name="quantity_of_material_text">Количество материала:</string>
    <string name="new_material_text">Выберите материал:</string>
    <string name="material_edit_text">нажмите, чтобы выбрать материал</string>
    <string name="quantity_of_work_edit_text">введите количество работы</string>
    <string name="quantity_of_material_edit_text">введите количество материала</string>
    <string name="transport_vehicle_text">Выберите транспортное средство:</string>
    <string name="transport_vehicle_edit_text">нажмите, чтобы выбрать транспортное средство</string>
    <string name="quantity_of_transport_vehicle_text">Время работы транспортного средства:</string>
    <string name="quantity_of_transport_vehicle_edit_text">введите время работы транспортного средства</string>
    <string name="button_add_new_report_text">ОТПРАВИТЬ ОТЧЕТ</string>
    <string name="button_update_report_text">ОБНОВИТЬ ОТЧЕТ</string>
    <string name="list_report_text">Сменные отчеты:</string>
    <string name="button_new_report">НОВЫЙ ОТЧЕТ</string>
    <string name="key_report_text">Номер отчета: </string>
    <string name="date_of_report_text">Дата: </string>
    <string name="object_text">Объект: </string>
    <string name="foreman_text">Исполнитель: </string>
    <string name="login_text">ЛОГИН ПОЛЬЗОВАТЕЛЯ:</string>
    <string name="login_edit_text">введите логин пользователя</string>
    <string name="password_text">ПАРОЛЬ:</string>
    <string name="password_edit_text">введите пароль</string>
    <string name="button_autorisation_text">ВОЙТИ</string>
    <string name="autorisation_fragment_label">АВТОРИЗАЦИЯ</string>
    <string name="foreman_one_text">производитель работ</string>
    <string name="foreman_report_text">Ответственный:</string>
    <string name="new_transport_text">Транспортное средство:</string>
    <string name="transport_edit_text">выберите транспортное средство</string>
    <string name="quantity_of_transport_text">Время работы:</string>
    <string name="quantity_of_transport_edit_text">введите время работы</string>
    <string name="button_add_new_transport_text">ДОБАВИТЬ ТЕХНИКУ</string>
    <string name="button_add_new_personnel_text">ДОБАВИТЬ ТРУД</string>
    <string name="new_personnel_text">Персонал:</string>
    <string name="personnel_edit_text">выберите персонал</string>
    <string name="quantity_of_personnel_text">Время работы:</string>
    <string name="quantity_of_personnel_edit_text">Время работы:</string>
    <string name="name_edit_text">введите имя пользователя</string>
    <string name="name_text">ИМЯ ПОЛЬЗОВАТЕЛЯ:</string>
    <string name="zero">0.0</string>
    <string name="copy_report">СКОПИРОВАТЬ ОТЧЕТ</string>


    quantity_of_work_text
</resources>