<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AutorisationFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/autorisation_fragment">
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/name_text"
            />
        <AutoCompleteTextView
            style="@style/edit_text_report_style"
            android:id="@+id/autoComplete_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text"/>

        <TextView
            style="@style/heading_report_style"
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/autoComplete_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_text"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            app:layout_constraintStart_toStartOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="@+id/login_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Deprecated"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/construction_object_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/password_text"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/construction_object_text"
            app:layout_constraintStart_toStartOf="@+id/construction_object_text"
            app:layout_constraintEnd_toEndOf="@+id/construction_object_text"
            android:hint="@string/password_edit_text"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            style="@style/button_style"
            android:id="@+id/button_autorisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_autorisation_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>