<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoadFragment">
    <fragment
        android:id="@+id/LoadFragment"
        android:name="com.example.daylyreport.LoadFragment"
        tools:layout="@layout/fragment_load">
        <action
            android:id="@+id/action_LoadFragment_to_AutorisationFragment"
            app:destination="@+id/AutorisationFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/AutorisationFragment"
        android:name="com.example.daylyreport.AutorisationFragment"
        android:label="@string/autorisation_fragment_label"
        tools:layout="@layout/fragment_autorisation">
        <action
            android:id="@+id/action_AutorisationFragment_to_ListReportFragment"
            app:destination="@+id/ListReportFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/ListReportFragment"
        android:name="com.example.daylyreport.ListReportFragment"
        android:label="@string/list_report_fragment_label"
        tools:layout="@layout/fragment_list_report">
        <action
            android:id="@+id/action_ListReportFragment_to_ReportFragment"
            app:destination="@+id/ReportFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/ReportFragment"
        android:name="com.example.daylyreport.ReportFragment"
        android:label="@string/report_fragment_label"
        tools:layout="@layout/fragment_report">
        <action
            android:id="@+id/action_ReportFragment_to_ListReportFragment"
            app:destination="@+id/ListReportFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"/>
    </fragment>

</navigation>