<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_work_recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/typical_work_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/typical_work_text"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/typical_work_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/typical_work_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/typical_work_edit_text"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/typical_work_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/location_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/typical_work_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/location_start_text"/>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/pk_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/location_start_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pk"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/pk_start_edit_text"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/pk_start_text"
            app:layout_constraintBottom_toBottomOf="@+id/pk_start_text"
            app:layout_constraintStart_toEndOf="@+id/pk_start_text"
            android:hint="@string/pk"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pk_start_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/plus_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/location_start_text"
            app:layout_constraintStart_toEndOf="@+id/pk_start_edit_text"
            android:text="@string/plus"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/plus_start_edit_text"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/pk_start_text"
            app:layout_constraintBottom_toBottomOf="@+id/pk_start_text"
            app:layout_constraintStart_toEndOf="@+id/plus_start_text"
            android:hint="@string/plus"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plus_start_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/location_end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pk_start_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/location_end_text"/>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/pk_end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/location_end_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pk"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/pk_end_edit_text"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/pk_end_text"
            app:layout_constraintBottom_toBottomOf="@+id/pk_end_text"
            app:layout_constraintStart_toEndOf="@+id/pk_end_text"
            android:hint="@string/pk"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pk_end_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/plus_end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/location_end_text"
            app:layout_constraintStart_toEndOf="@+id/pk_end_edit_text"
            android:text="@string/plus"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/plus_end_edit_text"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/pk_end_text"
            app:layout_constraintBottom_toBottomOf="@+id/pk_end_text"
            app:layout_constraintStart_toEndOf="@+id/plus_end_text"
            android:hint="@string/plus"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plus_end_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/location_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pk_end_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/location_comment"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/location_comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/location_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/location_comment_hint"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_comment_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            style="@style/heading_report_style"
            android:id="@+id/quantity_of_work_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/location_comment_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/quantity_of_work_text"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_text_report_style"
            android:id="@+id/quantity_of_work_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quantity_of_work_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/quantity_of_work_edit_text"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_of_work_edit_text_for_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/new_material_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity_of_work_edit_text"
            android:layout_marginVertical="10dp"/>
        <Button
            style="@style/button_style"
            android:id="@+id/button_add_new_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_new_material_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_material_recycler_view"/>
        <LinearLayout
            android:id="@+id/new_transport_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_new_material"
            android:layout_marginVertical="10dp"/>
        <Button
            style="@style/button_style"
            android:id="@+id/button_add_new_transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_new_transport_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_transport_recycler_view"/>
        <LinearLayout
            android:id="@+id/new_personnel_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_new_transport"
            android:layout_marginVertical="10dp"/>
        <Button
            style="@style/button_style"
            android:id="@+id/button_add_new_personnel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_new_personnel_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_personnel_recycler_view"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>