<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/element_list_report_recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/key_dayly_report_text"
        style="@style/heading_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_report_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/key_dayly_report"
        style="@style/edit_text_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        app:layout_constraintBottom_toBottomOf="@+id/key_dayly_report_text"
        app:layout_constraintStart_toEndOf="@+id/key_dayly_report_text" />

    <TextView
        android:id="@+id/date_text"
        style="@style/heading_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_report_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_dayly_report_text" />

    <TextView
        android:id="@+id/date"
        style="@style/edit_text_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX.XX.XXXX"
        app:layout_constraintBottom_toBottomOf="@+id/date_text"
        app:layout_constraintStart_toEndOf="@+id/date_text" />

    <TextView
        android:id="@+id/construction_object_text"
        style="@style/heading_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_text" />

    <TextView
        android:id="@+id/construction_object"
        style="@style/edit_text_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Объект 1"
        app:layout_constraintBottom_toBottomOf="@+id/construction_object_text"
        app:layout_constraintStart_toEndOf="@+id/construction_object_text" />

    <TextView
        android:id="@+id/foreman_text"
        style="@style/heading_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foreman_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/construction_object_text" />

    <TextView
        android:id="@+id/foreman"
        style="@style/edit_text_report_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Иванов Иван Иванович"
        app:layout_constraintBottom_toBottomOf="@+id/foreman_text"
        app:layout_constraintStart_toEndOf="@+id/foreman_text" />

    <View
        android:background="@color/medium_persian_blue"
        app:layout_constraintTop_toBottomOf="@id/foreman_text"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
